--- a/src/composer.json
+++ b/src/composer.json
@@ -9,11 +9,13 @@
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.8",
+        "laravel/horizon": "^5.15",
         "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.14",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^3.3",
+        "predis/predis": "^2.1",
         "rap2hpoutre/fast-excel": "^5.2",
         "spatie/laravel-csp": "^2.8",
         "stevebauman/purify": "^6.0",
